# hashes-ohos

./: Cargo.toml  README.md
package/: LICENSE  README.md  index.ets  oh-package.json5
package/src/main/: module.json5
src/: lib.rs
