[package]
name    = "hashes-ohos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "1.0.0" }
napi-derive-ohos = { version = "1.0.0" }
# hashes
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"
sm3 = "0.4.1"
belt-hash = "0.1.0"
blake2 = "0.10.6"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
ripemd = "0.1.3"
shabal = "0.4.1"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"

[build-dependencies]
napi-build-ohos = { version = "1.0.0" }

[profile.release]
lto = true
